@@ -1,9 +1,6 @@
 package com.mzinx.mongodb.changestream.service;
 
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -16,7 +13,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-import org.bson.BsonDocument;
 import org.bson.BsonString;
 import org.bson.Document;
 import org.bson.conversions.Bson;
@@ -27,36 +23,30 @@ import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.resilience.annotation.Retryable;
 import org.springframework.stereotype.Service;
 
+import com.mongodb.MongoCommandException;
 import com.mongodb.MongoException;
-import com.mongodb.ReadConcern;
-import com.mongodb.ReadPreference;
-import com.mongodb.TransactionOptions;
-import com.mongodb.WriteConcern;
-import com.mongodb.client.ClientSession;
-import com.mongodb.client.MongoClient;
-import com.mongodb.client.TransactionBody;
+import com.mongodb.MongoInterruptedException;
 import com.mongodb.client.model.Accumulators;
 import com.mongodb.client.model.Aggregates;
 import com.mongodb.client.model.Filters;
+import com.mongodb.client.model.FindOneAndUpdateOptions;
 import com.mongodb.client.model.IndexOptions;
 import com.mongodb.client.model.Indexes;
 import com.mongodb.client.model.Projections;
+import com.mongodb.client.model.ReturnDocument;
 import com.mongodb.client.model.Sorts;
 import com.mongodb.client.model.UpdateOptions;
 import com.mongodb.client.model.Updates;
 import com.mongodb.client.model.changestream.ChangeStreamDocument;
-import com.mongodb.client.model.changestream.OperationType;
-import com.mongodb.client.model.changestream.UpdateDescription;
-import com.mongodb.client.result.UpdateResult;
-import com.mzinx.mongodb.aggregation.service.AggregationService;
-import com.mzinx.mongodb.changestream.config.ChangeStreamProperties;
-import com.mzinx.mongodb.changestream.model.ChangeStream;
-import com.mzinx.mongodb.changestream.model.ChangeStreamRegistry;
-import com.mzinx.mongodb.changestream.model.ChangeStream.Mode;
-import com.mzinx.mongodb.changestream.model.ChangeStream.ResumeStrategy;
 import com.mzinx.mongodb.aggregation.dao.PipelineRepository;
 import com.mzinx.mongodb.aggregation.model.Aggregation;
 import com.mzinx.mongodb.aggregation.model.PipelineTemplate;
+import com.mzinx.mongodb.aggregation.service.AggregationService;
+import com.mzinx.mongodb.changestream.config.ChangeStreamProperties;
+import com.mzinx.mongodb.changestream.model.ChangeStream;
+import com.mzinx.mongodb.changestream.model.ChangeStream.Mode;
+import com.mzinx.mongodb.changestream.model.ChangeStream.ResumeStrategy;
+import com.mzinx.mongodb.changestream.model.ChangeStreamRegistry;
 
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
@@ -69,10 +59,7 @@ public class ChangeStreamService<T> {
 	private static final String HOST_FIELD = "_id.h";
 	private static final String DATE_FIELD = "at";
 	private static final String TOKEN_FIELD = "t";
-	private static final String CHANGE_STREAMS_FIELD = "cs";
 
-	@Autowired
-	private MongoClient mongoClient;
 	@Autowired
 	private MongoTemplate mongoTemplate;
 	@Autowired
@@ -83,6 +70,7 @@ public class ChangeStreamService<T> {
 
 	@Autowired
 	private AggregationService aggregationService;
+
 	@Autowired
 	private PipelineRepository pipelineRepository;
 
@@ -96,6 +84,8 @@ public class ChangeStreamService<T> {
 
 	private static final String RESUME_TOKEN_PIPELINE_NAME = "getResumeToken";
 	private PipelineTemplate pipelineTemplate;
+
+	// *****TODO: TEST AUTO SCALING, START/STOP node, START/STOP all*****
 
 	@PostConstruct
 	private void init() {
@@ -113,11 +103,11 @@ public class ChangeStreamService<T> {
 					Aggregates.match(
 							Filters.expr(
 									Filters.and(
-											new Document("$eq", Arrays.asList("$_id.cs",
+											new Document("$eq", List.of("$_id.cs",
 													new Document("_ph", "csId"))),
-											new Document("$gte", Arrays.asList("$at",
+											new Document("$gte", List.of("$at",
 													new Document("$ifNull",
-															Arrays.asList(new Document("_ph", "earliest"), "$at"))))))),
+															List.of(new Document("_ph", "earliest"), "$at"))))))),
 					Aggregates.group("$_id.h", Accumulators.first("d", "$$ROOT")),
 					Aggregates.sort(Sorts.ascending("d.at")),
 					Aggregates.limit(1),
@@ -135,101 +125,28 @@ public class ChangeStreamService<T> {
 			// watch instances collection change
 			if (event.getNamespace().getCollectionName().equals(changeStreamProperties.getInstanceCollection())) {
 				try {
-					if (OperationType.INSERT == event.getOperationType()
-							|| OperationType.DELETE == event.getOperationType()) {
-						logger.info("change streams running in this node " + changeStreams.keySet());
-					}
 					String instance = event.getDocumentKey().getString("_id").getValue();
-					Document document = (Document) event.getFullDocument();
 					for (String csId : changeStreams.keySet()) {
 						ChangeStreamRegistry<T> reg = changeStreams.get(csId);
-						ChangeStream<T> cs = reg.getChangeStream();
+
 						switch (event.getOperationType()) {
 							case INSERT:
-								if (Mode.AUTO_SCALE == cs.getMode()) {
-									this._stop(reg);
-									run(reg, event.getFullDocument() != null
-											? document.getDate("at")
-											: null);
-								} else {
-									if (document != null && document.containsKey(CHANGE_STREAMS_FIELD)) {
-										List<String> runningCSs = document.getList(CHANGE_STREAMS_FIELD, String.class);
-										if (runningCSs.contains(csId))
-											reg.getInstances().add(instance);
-									}
-								}
+								this.shouldRun(reg, Mode.AUTO_SCALE == reg.getChangeStream().getMode());
 								break;
 							case UPDATE:
-								if (Mode.AUTO_RECOVER == cs.getMode()) {
-									UpdateDescription ud = event.getUpdateDescription();
-									if (ud != null) {
-										if (ud.getRemovedFields().contains(CHANGE_STREAMS_FIELD)) {
-											logger.info(
-													"stopping change stream " + csId);
-											this._stop(reg);
-										} else {
-											BsonDocument updatedFields = ud.getUpdatedFields();
-											if (updatedFields != null
-													&& updatedFields.containsKey(CHANGE_STREAMS_FIELD)) {
-												if (updatedFields.getArray(CHANGE_STREAMS_FIELD)
-														.contains(new BsonString(csId))) {
-													if (!reg.getChangeStream().isRunning()) {
-														// restart change stream
-														this.run(reg);
-													}
-												} else {
-													logger.info(
-															"stopping change stream " + csId);
-													this._stop(reg);
-												}
-											}
-										}
-									}
-								} else if (Mode.AUTO_SCALE == cs.getMode()) {
-									if (!cs.isRunning()) {
-										logger.info(
-												cs.getId() + " is not yet running in "
-														+ changeStreamProperties.getHostname() + " start it now.");
-										scale(reg);
-									}
-								}
+								this.shouldRun(reg);
 								break;
 							case DELETE:
-								if (Mode.AUTO_RECOVER == cs.getMode()) {
-									if (changeStreamProperties.getHostname().equals(instance)) {
-										if (changeStreams.containsKey(cs.getId())
-												&& cs.isRunning()) {
-											logger.info(
-													"Change stream running in this node should stop.");
-											this._stop(reg);
-										}
-									} else {
-										if (changeStreams.containsKey(cs.getId())
-												&& changeStreams.get(cs.getId()).getChangeStream().isRunning()) {
-											logger.info(
-													instance + " is dead, I'm still running change stream:"
-															+ cs.getId());
-											reg.getInstances().remove(instance);
-										} else {
-											logger.info(
-													instance + " is dead, " + changeStreamProperties.getHostname()
-															+ " try to take over change stream:"
-															+ cs.getId());
-											this._stop(reg);
-											run(reg);
-										}
-									}
-								} else if (Mode.AUTO_SCALE == cs.getMode()) {
-									this._stop(reg);
-									run(reg, ((Document) event.getFullDocumentBeforeChange()).getDate("at"));
-								} else {
-									reg.getInstances().remove(instance);
-								}
+								this.runForSubstitute(csId, instance,
+										changeStreamProperties.getHostname());
 								break;
 							default:
 								break;
+
 						}
 					}
+					// if (OperationType.DELETE == event.getOperationType()) {
+					// }
 				} catch (RuntimeException e) {
 					logger.error("Unexpected error while processing node changes:", e);
 				}
@@ -239,95 +156,236 @@ public class ChangeStreamService<T> {
 
 	@PreDestroy
 	private void destroy() {
-		this.clear();
 		for (String csId : changeStreams.keySet()) {
-			changeStreams.get(csId).getChangeStream().setRunning(false);
-			changeStreams.remove(csId);
+			this.stop(changeStreams.get(csId), false);
+			this.changeStreams.remove(csId);
+		}
+		this.clear();
+	}
+
+	private void runForLeader(ChangeStreamRegistry<T> reg) {
+		Document doc = mongoTemplate.getCollection(changeStreamProperties.getChangeStreamCollection()).findOneAndUpdate(
+				Filters.eq("_id", reg.getChangeStream().getId()), List.of(
+						new Document("$set", new Document()
+								.append("_id", reg.getChangeStream().getId())
+								.append("l",
+										new Document("$ifNull",
+												List.of("$l", changeStreamProperties.getHostname())))
+								.append("at", new Date())
+								.append("i", new Document(
+										"$setUnion", List.of(
+												new Document("$ifNull", List.of("$i", List.of())),
+												List.of(changeStreamProperties.getHostname())))))),
+				new FindOneAndUpdateOptions().upsert(true).returnDocument(ReturnDocument.AFTER));
+		reg.setLeader(doc.getString("l"));
+		reg.setInstances(doc.getList("i", String.class));
+		this.changeStreams.put(reg.getChangeStream().getId(), reg);
+	}
+
+	private void runForSubstitute(String csId, String deadHost) {
+		this.runForSubstitute(csId, deadHost, null);
+	}
+
+	private void runForSubstitute(String csId, String deadHost, String replacement) {
+		Document doc = null;
+		if (deadHost == null && replacement == null) {
+			doc = mongoTemplate
+					.getCollection(changeStreamProperties.getChangeStreamCollection()).findOneAndUpdate(
+							Filters.eq("_id", csId), List.of(
+									new Document("$set", new Document()
+											.append("_id", csId)
+											.append("l", null)
+											.append("at", new Date())
+											.append("i", List.of()))),
+							new FindOneAndUpdateOptions().upsert(true).returnDocument(ReturnDocument.AFTER));
+		} else {
+			doc = mongoTemplate
+					.getCollection(changeStreamProperties.getChangeStreamCollection()).findOneAndUpdate(
+							Filters.eq("_id", csId), List.of(
+									new Document("$set", new Document()
+											.append("_id", csId)
+											.append("l", new Document("$cond",
+													List.of(new Document("$eq",
+															List.of(new Document("$ifNull", List.of("$l", deadHost)),
+																	deadHost)),
+															replacement,
+															"$l")))
+											.append("at", new Date())
+											.append("i", new Document(
+													"$filter", new Document()
+															.append("input", "$i")
+															.append("as", "item")
+															.append("cond", new Document("$ne",
+																	List.of("$$item", deadHost))))))),
+							new FindOneAndUpdateOptions().upsert(true).returnDocument(ReturnDocument.AFTER));
+		}
+		if (this.changeStreams.containsKey(csId)) {
+			this.changeStreams.get(csId).setLeader(doc.getString("l"));
+			this.changeStreams.get(csId).setInstances(doc.getList("i", String.class));
 		}
 	}
 
-	public void run(ChangeStreamRegistry<T> reg) {
-		this.run(reg, null);
+	public void start(ChangeStreamRegistry<T> reg) {
+		this.logger.info("Start running change stream:" + reg.getChangeStream().getId());
+		this.runForLeader(reg);
+		this.prepareResumeToken(reg);
+		this.shouldRun(reg);
 	}
 
-	@Retryable(includes = { MongoException.class }, maxRetries = 10, delay = 5000, multiplier = 2)
-	public void run(ChangeStreamRegistry<T> reg, Date earliest) {
-		logger.info("Start running change stream");
-		changeStreams.put(reg.getChangeStream().getId(), reg);
+	private void prepareResumeToken(ChangeStreamRegistry<T> reg) {
 		ChangeStream<T> cs = reg.getChangeStream();
-
-		logger.info("ResumeStrategy:" + cs.getResumeStrategy());
+		this.logger.info("ResumeStrategy:" + cs.getResumeStrategy());
 		if (ResumeStrategy.NONE != cs.getResumeStrategy()) {
 			Aggregation<Document> agg = Aggregation.of(changeStreamProperties.getResumeTokenCollection(),
 					this.pipelineTemplate.getContent());
 			Map<String, Object> variables = new HashMap<>();
 			variables.put("csId", cs.getId());
-			variables.put("earliest", earliest);
+			variables.put("earliest", reg.getEarliestChangeAt());
 			List<Document> l = aggregationService.execute(agg, variables);
 			if (l.size() > 0) {
+				this.logger.info("Resume change stream " + cs.getId() + " from: " + l);
 				cs.resumeAfter(l.get(0).getString(TOKEN_FIELD));
 			}
-		}
-
-		logger.info("Mode:" + cs.getMode());
-		if (Mode.AUTO_RECOVER == cs.getMode()) {
-			final ClientSession clientSession = mongoClient.startSession();
-			try {
-				clientSession.withTransaction(new TransactionBody<Void>() {
-					@Override
-					public Void execute() {
-						Document doc = mongoTemplate.getCollection(changeStreamProperties.getInstanceCollection())
-								.find(clientSession, Filters.eq(CHANGE_STREAMS_FIELD, cs.getId())).first();
-						if (doc == null) {
-							UpdateResult ur = mongoTemplate
-									.getCollection(changeStreamProperties.getInstanceCollection()).updateOne(
-											clientSession,
-											Filters.eq("_id", changeStreamProperties.getHostname()),
-											Updates.combine(Updates.set("_id", changeStreamProperties.getHostname()),
-													Updates.set(DATE_FIELD,
-															Instant.now().plus(changeStreamProperties.getMaxTimeout(),
-																	ChronoUnit.MILLIS)),
-													Updates.addToSet(CHANGE_STREAMS_FIELD, cs.getId())),
-											new UpdateOptions().upsert(true));
-							logger.info("Update result:" + ur);
-							if (ur.getUpsertedId() != null || ur.getModifiedCount() > 0) {
-								logger.info(changeStreamProperties.getHostname() + " wins");
-								start(reg);
-							}
-						} else {
-							reg.getInstances().add(doc.getString("_id"));
-							if (changeStreamProperties.getHostname().equals(doc.getString("_id"))) {
-								if (changeStreams.containsKey(cs.getId())
-										&& cs.isRunning()) {
-									logger.info("Change stream already running in this node");
-								} else {
-									start(reg);
-								}
-							} else {
-								logger.info("Change stream already running in other node:" + doc);
-							}
-						}
-						return null;
-					}
-
-				}, TransactionOptions.builder()
-						.writeConcern(WriteConcern.MAJORITY).readConcern(ReadConcern.MAJORITY)
-						.readPreference(ReadPreference.primary())
-						.build());
-			} catch (RuntimeException e) {
-				logger.error("Unexpected error while registering change stream " + cs.getId() + ":", e);
-				throw e;
-			} finally {
-				clientSession.close();
-			}
-		} else if (Mode.AUTO_SCALE == cs.getMode()) {
-			scale(reg);
-		} else {
-			start(reg);
+			reg.setEarliestChangeAt(null);
 		}
 	}
 
-	private void start(ChangeStreamRegistry<T> reg) {
+	public void restart(ChangeStreamRegistry<T> reg) {
+		reg.stop();
+		this.prepareResumeToken(reg);
+		if (Mode.AUTO_SCALE == reg.getChangeStream().getMode()) {
+			this.scale(reg);
+		} else {
+			this.run(reg);
+		}
+	}
+
+	public void shouldRun(ChangeStreamRegistry<T> reg) {
+		this.shouldRun(reg, false);
+	}
+
+	@Retryable(includes = { MongoException.class }, maxRetries = 10, delay = 5000, multiplier = 2)
+	public void shouldRun(ChangeStreamRegistry<T> reg, boolean forceRestart) {
+		this.logger.debug("csid: " + reg.getChangeStream().getId() + ", leader: " + reg.getLeader() + ", instances: "
+				+ reg.getInstances());
+		boolean shouldRun = reg.getInstances().contains(changeStreamProperties.getHostname());
+
+		this.logger.debug(reg.getChangeStream().getId() + " shouldRun:" + shouldRun + " isRunning:"
+				+ reg.getChangeStream().isRunning() + " Mode:" + reg.getChangeStream().getMode());
+		switch (reg.getChangeStream().getMode()) {
+			case BOARDCAST:
+				// Boardcast mode
+				// -First start
+				// --run for leader+register host
+				// --get resume token
+				// --start
+				// -New member join (new)
+				// --run for leader+register host
+				// --get resume token
+				// --start
+				// -New member join (old)
+				// --Do nothing
+				// -Member die
+				// --Do nothing
+				// -Leader die
+				// --Do nothing
+				// -Stop
+				// --deregister
+				// --stop
+				// -Start
+				// --run for leader+register host
+				// --get resume token
+				// --start
+				if (!reg.getChangeStream().isRunning()) {
+					run(reg);
+				} else if (!shouldRun) {
+					reg.stop();
+				} else {
+					this.logger.debug("do nothing");
+				}
+				break;
+			case AUTO_RECOVER:
+				// Auto recovery mode
+				// -First start
+				// --run for leader+register host
+				// --get resume token
+				// --start
+				// -New member join (new)
+				// --run for leader+register host
+				// --standby
+				// -New member join (old)
+				// --Do nothing
+				// -Member die
+				// --Do nothing
+				// -Leader die
+				// --run for leader
+				// --get resume token
+				// --restart
+				// -Stop
+				// --deregister
+				// --stop
+				// -Start
+				// --run for leader+register host
+				// --get resume token
+				// --start
+				if (reg.getLeader() == null) {
+					this.logger.info("leader stepped down, try to take over.");
+					this.start(reg);
+				} else if (this.changeStreamProperties.getHostname().equals(reg.getLeader())) {
+					if (!reg.getChangeStream().isRunning())
+						this.run(reg);
+				} else {
+					if (reg.getChangeStream().isRunning())
+						reg.stop();
+				}
+				break;
+			case AUTO_SCALE:
+				// Auto scale mode
+				// First start
+				// New member join
+				// Member die
+				// Leader die
+				// Stop
+				// Start
+				if (shouldRun && !reg.getChangeStream().isRunning()) {
+					this.logger
+							.info("I should run the change stream " + reg.getChangeStream().getId() + ", start now.");
+					this.scale(reg);
+				} else if (!shouldRun && reg.getChangeStream().isRunning()) {
+					this.logger
+							.info("I shouldn't run the change stream " + reg.getChangeStream().getId() + ", stop now.");
+					reg.stop();
+				} else if (forceRestart) {
+					this.restart(reg);
+				}
+				break;
+			default:
+				break;
+
+		}
+		// Deregister dead member??
+	}
+
+	public void scale(ChangeStreamRegistry<T> reg) {
+		ChangeStream<T> cs = reg.getChangeStream();
+		int index = new ArrayList<String>(this.instances).indexOf(this.changeStreamProperties.getHostname());
+		reg.setInstanceSize(this.instances.size());
+		reg.setInstanceIndex(index);
+		if (this.instances.size() > 0 && index >= 0) {
+			if (cs.isRunning()) {
+				reg.stop();
+			}
+			this.logger.info("change stream " + (index + 1) + " of " + this.instances.size()
+					+ " start running in "
+					+ this.changeStreamProperties.getHostname());
+			this.run(reg);
+		} else {
+			this.logger.info("Node " + this.changeStreamProperties.getHostname() + " is not ready to run change stream:"
+					+ cs.getId());
+		}
+	}
+
+	private void run(ChangeStreamRegistry<T> reg) {
 		CompletableFuture<Object> completableFuture = CompletableFuture.supplyAsync(() -> {
 			try {
 				if (reg.getCollectionName() != null) {
@@ -340,55 +398,35 @@ public class ChangeStreamService<T> {
 						saveCheckpoint(reg.getChangeStream().getId(), resumeToken);
 					});
 				}
+			} catch (MongoInterruptedException e) {
+				this.logger.info("Change stream '" + reg.getChangeStream().getId() + "' Interrupted");
 			} catch (RuntimeException e) {
-				logger.error("Stopping change stream '" + reg.getChangeStream().getId() + "'' due to unexpected error:",
-						e);
-				this._stop(reg);
+				if (e instanceof MongoCommandException && ((MongoCommandException) e).getCode() == 286) {
+					this.logger.warn("Change stream '" + reg.getChangeStream().getId()
+							+ "' history lost, token: '"+ reg.getChangeStream().getResumeToken() +"', restart without resume token");
+							reg.getChangeStream().setResumeToken(null);
+					mongoTemplate.getCollection(changeStreamProperties.getResumeTokenCollection()).deleteOne(
+							Filters.and(Filters.eq(CSID_FIELD, reg.getChangeStream().getId()),
+									Filters.eq(HOST_FIELD, changeStreamProperties.getHostname())));
+				} else {
+					this.logger.error(
+							"Stopping change stream '" + reg.getChangeStream().getId() + "' due to unexpected error:",
+							e);
+				}
+				reg.stop();
 				// Recover for unexpected exception
-				this.run(reg);
+				this.start(reg);
 			}
 			return null;
 		}, taskExecutor);
 		reg.setCompletableFuture(completableFuture);
-		reg.getInstances().add(changeStreamProperties.getHostname());
-		logger.info(reg.getInstances() + " are running change stream " + reg.getChangeStream().getId());
-		logger.info("Change stream " + reg.getChangeStream().getId() + " started");
+		this.logger.info("Change stream " + reg.getChangeStream().getId() + " started");
 	}
 
-	public void stop(ChangeStreamRegistry<T> reg) {
-		logger.info("Stop running change stream");
-		this._stop(reg);
-		mongoTemplate.getCollection(changeStreamProperties.getInstanceCollection()).findOneAndUpdate(
-				Filters.eq(CHANGE_STREAMS_FIELD, reg.getChangeStream().getId()),
-				Updates.pull(CHANGE_STREAMS_FIELD, changeStreamProperties.getHostname()));
-	}
-
-	public void _stop(ChangeStreamRegistry<T> reg) {
-		reg.getChangeStream().setRunning(false);
-		reg.getInstances().remove(changeStreamProperties.getHostname());
-		if (reg.getCompletableFuture() != null)
-			reg.getCompletableFuture().join();
-	}
-
-	private void scale(ChangeStreamRegistry<T> reg) {
-		ChangeStream<T> cs = reg.getChangeStream();
-		int index = new ArrayList<String>(this.instances).indexOf(changeStreamProperties.getHostname());
-		reg.setInstanceSize(this.instances.size());
-		reg.setInstanceIndex(index);
-		reg.getInstances().clear();
-		reg.getInstances().addAll(this.instances);
-		if (this.instances.size() > 0 && index >= 0) {
-			if (cs.isRunning()) {
-				this._stop(reg);
-			}
-			logger.info("change stream " + (index + 1) + " of " + this.instances.size()
-					+ " start running in "
-					+ changeStreamProperties.getHostname());
-			start(reg);
-		} else {
-			logger.info("Node " + changeStreamProperties.getHostname() + " is not ready to run change stream:"
-					+ cs.getId());
-		}
+	public void stop(ChangeStreamRegistry<T> reg, boolean stopAll) {
+		this.logger.info("Stop change stream");
+		reg.stop();
+		runForSubstitute(reg.getChangeStream().getId(), stopAll ? null : changeStreamProperties.getHostname());
 	}
 
 	@Retryable(includes = { MongoException.class }, maxRetries = 10, delay = 1000, multiplier = 2)
